# TestingCMakeInterfacing

./: CMakeLists.txt  main.cpp
libraryWrapper/: CMakeLists.txt  libraryWrapper.cpp  libraryWrapper.hpp
